--- a/src/components/start-page/GetPlayerNum.module.css
+++ b/src/components/start-page/GetPlayerNum.module.css
@@ -5,6 +5,7 @@
 }
 
 input[type="number"] {
+  margin-top: 75px;
   width: 150px;
   height: 65px;
   border-radius: 10px;
